--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
+log = "0.4"
+env_logger = "0.11"
+async-trait = "0.1.50"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
