--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ async-trait = "0.1.50"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 regex = "1"
+cassandra-cpp = "3.0.2"
+lazy_static = "1.5.0"
+rand = "0.8.5"
