--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,8 +11,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
+    - name: Run docker-compose
+      uses: hoverkraft-tech/compose-action@v2.0.1
+      with:
+        compose-file: "./docker/docker-compose.yml"
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker-compose up --build 
