--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Run docker-compose
       uses: hoverkraft-tech/compose-action@v2.0.1
       with:
-        compose-file: "./docker/docker-compose.yml"
+        compose-file: "../docker-compose.yaml"
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker-compose up --build 
