add docker mounting, move check_username to check, fix mmessaging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     command: ["bash"]
     volumes:
       - .:/usr/src/app/
+      - /usr/src/app/target
 
 volumes:
   cassandra_data:
