--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ sha2 = "0.10.0"
 base64 = "0.22.1"
 hex = "0.4.3"
 argon2 = "0.5.0"
+async-trait = "0.1.83"
+quinn = "0.11.5"
+moro = "0.4.0"
 
 [profile.release]
 strip=true
