--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ base64 = "0.22.1"
 hex = "0.4.3"
 argon2 = "0.5.0"
 async-trait = "0.1.83"
-quinn = "0.11.5"
 moro = "0.4.0"
 rcgen = "0.13.1"
+webrtc = "0.11.0"
 
 [profile.release]
 strip=true
