--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,10 +26,7 @@ services:
     networks: 
       - cassandra 
     ports:
-      - target: 8080
-        published: 8080
-        protocol: udp
-        mode: host
+      - "8080:8080/tcp"
       - "3000:3000/tcp"
     environment:
       CASSANDRA_HOST: cassandra
