--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,8 @@ hex = "0.4.3"
 argon2 = "0.5.0"
 async-trait = "0.1.83"
 moro = "0.4.0"
-rcgen = "0.13.1"
-webrtc = "0.11.0"
 dashmap = "6.1.0"
+ffmpeg-next = "7.1.0"
 
 [profile.release]
 strip=true
