--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ argon2 = "0.5.0"
 async-trait = "0.1.83"
 moro = "0.4.0"
 dashmap = "6.1.0"
-ffmpeg-next = "7.1.0"
+ffmpeg-sys-next = "7.1.0"
 
 [profile.release]
 strip=true
