replace cassandra with scylladb

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ dashmap = "6.1.0"
 ffmpeg-sys-next = "7.1.0"
 mozjpeg = {version = "0.10.12", features = ["with_simd"] }
 image = "0.25.5"
+chrono = "0.4.39"
 
 [profile.release]
 strip=true
