--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,31 @@
-version: '3.8'
-
 services:
-  cassandra:
-    image: cassandra:4.0.9
-    container_name: cassandra
-    logging:
-      driver: none
-    ports:
-      - "9042:9042"
-    networks:
-      - cassandra
-    environment:
-      CASSANDRA_START_RPC: 'true'
-    volumes:
-      - cassandra_data:/var/lib/cassandra
-      - ./conf/cassandra.yaml:/etc/cassandra/cassandra.yaml
+  scylla-node:
+      container_name: scylla-node
+      image: scylladb/scylla:5.2.0
+      restart: always
+      ports:
+        - "9042:9042"
+      networks:
+        - cassandra
+    # command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+      volumes:
+        - ./conf/scylla.yaml:/etc/scylla/scylla.yaml
+        - scylla_data:/var/lib/scylla
+
+  #  cassandra:
+  #    image: cassandra:4.0.9
+  #    container_name: cassandra
+  #    logging:
+  #      driver: none
+  #    ports:
+  #      - "9042:9042"
+  #    networks:
+  #      - cassandra
+  #    environment:
+  #      CASSANDRA_START_RPC: 'true'
+  #    volumes:
+  #      - cassandra_data:/var/lib/cassandra
+  #      - ./conf/cassandra.yaml:/etc/cassandra/cassandra.yaml
 
   rust-app:
     build:
@@ -22,14 +33,14 @@ services:
       dockerfile: Dockerfile
     container_name: rust-app
     depends_on:
-      - cassandra
+      - scylla-node
     networks:
       - cassandra
     ports:
       - "8080:8080/tcp"
       - "3000:3000/tcp"
     environment:
-      CASSANDRA_HOST: cassandra
+      CASSANDRA_HOST: 172.18.0.2
     stdin_open: true
     tty: true
     command: ["bash"]
@@ -37,10 +48,11 @@ services:
       - .:/usr/src/app/
       - /usr/src/app/target
       - ./server_data/:/server_data/
-
-volumes:
-  cassandra_data:
+      - ./log/:/tmp/log/
 
 networks:
   cassandra:
     driver: bridge
+
+volumes:
+  scylla_data:
