--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ log = "0.4"
 env_logger = "0.11"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-cassandra-cpp = "3.0.2"
 rand = "0.8.5"
 sha2 = "0.10.0"
 base64 = "0.22.1"
@@ -22,6 +21,8 @@ ffmpeg-sys-next = "7.1.0"
 mozjpeg = {version = "0.10.12", features = ["with_simd"] }
 image = "0.25.5"
 chrono = "0.4.39"
+scylla = "0.15.1"
+futures = "0.3.31"
 
 [profile.release]
 strip=true
