--- a/conf/scylla.yaml
+++ b/conf/scylla.yaml
@@ -216,7 +216,7 @@ endpoint_snitch: SimpleSnitch
 # you can specify which should be chosen using rpc_interface_prefer_ipv6. If false the first ipv4
 # address will be used. If true the first ipv6 address will be used. Defaults to false preferring
 # ipv4. If there is only one address it will be selected regardless of ipv4/ipv6.
-rpc_address: localhost
+rpc_address: 172.18.0.2
 # rpc_interface: eth1
 # rpc_interface_prefer_ipv6: false
 
@@ -259,7 +259,7 @@ batch_size_fail_threshold_in_kb: 1024
 # - com.scylladb.auth.TransitionalAuthorizer wraps around the CassandraAuthorizer, using it for
 #   authorizing permission management. Otherwise, it allows all. Use for upgrading
 #   clusters' auth.
-# authorizer: AllowAllAuthorizer
+# vnodes (num_tokens > 1, above) -- in which case you should provide a
 
 # initial_token allows you to specify tokens manually.  While you can use # it with
 # vnodes (num_tokens > 1, above) -- in which case you should provide a
